[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/character.gd" type="Script" id=1]
[ext_resource path="res://scenes/car_mesh.tscn" type="PackedScene" id=2]
[ext_resource path="res://models/Material.material" type="Material" id=3]
[ext_resource path="res://scenes/trail_patricles.tscn" type="PackedScene" id=4]
[ext_resource path="res://sound/engine.wav" type="AudioStream" id=5]
[ext_resource path="res://textures/smoke_06.png" type="Texture" id=6]
[ext_resource path="res://sound/drift.wav" type="AudioStream" id=7]
[ext_resource path="res://scenes/trophy.tscn" type="PackedScene" id=8]

[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.462745, 0.286275, 0.0862745, 1 )
albedo_texture = ExtResource( 6 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.978261, 0.275 ), -1.74876, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 0.3
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 3.0
linear_accel = 5.96
angle = 360.0
angle_random = 1.0
scale = 3.0
scale_random = 1.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="QuadMesh" id=7]

[sub_resource type="SpatialMaterial" id=35]
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.776471, 0.776471, 0.776471, 1 )

[sub_resource type="SpatialMaterial" id=32]
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.776471, 0.776471, 0.776471, 1 )

[sub_resource type="PhysicsMaterial" id=18]
absorbent = true

[sub_resource type="SphereShape" id=19]

[sub_resource type="SphereMesh" id=22]

[node name="character" type="Spatial" groups=["Characters"]]
script = ExtResource( 1 )

[node name="car_mesh" parent="." instance=ExtResource( 2 )]

[node name="ray_cast" type="RayCast" parent="car_mesh"]
transform = Transform( 1, 0, 0, 0, 0.994776, -0.102081, 0, 0.102081, 0.994776, 0, 0.555352, 0 )
enabled = true

[node name="stun_particle" type="Particles" parent="car_mesh"]
transform = Transform( 0.0341669, -0.999416, 0, 0.999416, 0.0341669, 0, 0, 0, 1, 0, 0.77011, 0 )
material_override = SubResource( 1 )
emitting = false
amount = 128
lifetime = 0.5
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )

[node name="trails" type="Spatial" parent="car_mesh"]

[node name="drift_trails" type="Spatial" parent="car_mesh"]

[node name="drift_trail_patricles_3d_1" parent="car_mesh/drift_trails" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.718624, -0.234737, 0.769988 )
material_override = SubResource( 35 )
emitting = false

[node name="drift_trail_patricles_3d_2" parent="car_mesh/drift_trails" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.687887, -0.234737, 0.769988 )
material_override = SubResource( 32 )
emitting = false

[node name="muzzle" type="Position3D" parent="car_mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.22929, -3.36972 )

[node name="engine_sound" type="AudioStreamPlayer3D" parent="car_mesh"]
stream = ExtResource( 5 )
unit_db = 3.5
unit_size = 2.0

[node name="drift_sound" type="AudioStreamPlayer3D" parent="car_mesh"]
stream = ExtResource( 7 )
unit_db = 6.0
unit_size = 3.0

[node name="trophy" parent="car_mesh" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.18731, 0 )

[node name="Ball" type="RigidBody" parent="."]
mass = 5.0
physics_material_override = SubResource( 18 )
gravity_scale = 10.0
continuous_cd = true
contacts_reported = 1
contact_monitor = true
linear_damp = 1.5
angular_damp = 2.5

[node name="collision_shape" type="CollisionShape" parent="Ball"]
shape = SubResource( 19 )

[node name="mesh_instance" type="MeshInstance" parent="Ball/collision_shape"]
visible = false
mesh = SubResource( 22 )
material/0 = ExtResource( 3 )

[node name="stun_timer" type="Timer" parent="."]

[node name="start_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="timer" type="Timer" parent="."]
wait_time = 0.08
autostart = true

[connection signal="body_entered" from="Ball" to="." method="_on_Ball_body_entered"]
[connection signal="timeout" from="stun_timer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="start_timer" to="." method="_on_start_timer_timeout"]
